--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
         <h1>Welcome to paunchers's Page</h1>
         <p>Explore my latest project by clicking the button below:</p>
-        <button onclick="window.location.href='https://markdavisson1345.github.io/myapp/';">   (change this to your link)
+        <button onclick="window.location.href='https://paunchers.github.io/';">   (change this to your link)
             Go to My CommuteWise
         </button>
     </div>
